# FMI-UP-OOP-2022-23-Homeworks

Introduction-To-Programming/Homework-01/: Task-01.cpp  Task-02.cpp  Task-03.cpp  Task-04.cpp
Introduction-To-Programming/Homework-02/: Task-01.cpp  Task-02.cpp  Task-03.cpp  Task-04.cpp  Task-05.cpp  Task-06.cpp
Introduction-To-Programming/Homework-03/: Task-01.cpp  Task-02.cpp  Task-03.cpp  Task-04.cpp
Introduction-To-Programming/Homework-04/: Task-01.cpp  Task-02.cpp  Task-03.cpp  Task-04.cpp
Object-Oriented-Programming/Homework-01/: README.md
Object-Oriented-Programming/Homework-01/Task-01/: Alignment.h  Row.cpp  Row.h  Table.cpp  Table.h  Value.cpp  Value.h  constants.h  helper.cpp  helper.h  main-01.cpp  main-01.h
Object-Oriented-Programming/Homework-01/Task-02/: CMakeLists.txt  DateTime.cpp  DateTime.h  Operations.h  Role.h  TextFile.cpp  TextFile.h  TextFilesManager.cpp  TextFilesManager.h  constants.h  main-02.cpp  main-02.h  main.cpp
Object-Oriented-Programming/Homework-01/Task-02/Outside_Resources/: Date.cpp  Date.h  Time.cpp  Time.h
Object-Oriented-Programming/Homework-02/Task-01/: Documentation.md  Documentation.txt  String.cpp  String.h  main.cpp
Object-Oriented-Programming/Homework-02/Task-02/: StringCreatorPieceByPiece.cpp  StringCreatorPieceByPiece.h  StringPiece.cpp  StringPiece.h  main.cpp
Object-Oriented-Programming/Homework-03/Task-01/: ConditionSet.hpp  IntersectionSet.hpp  Set.hpp  Task-01.cpp  UnionSet.hpp
Object-Oriented-Programming/Homework-03/Task-02/: Queue.hpp  Task-02.cpp
(+2 files in other folders)
